// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Interpolate> acceptance test 1`] = `
[
  "Hello ",
  "Sébastien",
  " how are you ",
  <span>
    today
  </span>,
  "? Another {unprovidedValue}!",
]
`;

exports[`interpolate acceptance test 1`] = `
[
  <React.Fragment>
    Hello 
    Sébastien
  </React.Fragment>,
  <React.Fragment>
     how are you 
    <span>
      today
    </span>
  </React.Fragment>,
  <React.Fragment>
    ? Another {unprovidedValue}!
  </React.Fragment>,
]
`;

exports[`interpolate placeholders with JSX values 1`] = `
[
  <React.Fragment>
    Hello 
    <b>
      Sébastien
    </b>
  </React.Fragment>,
  <React.Fragment>
     how are you 
    <span>
      today
    </span>
  </React.Fragment>,
  <React.Fragment>
    ?
  </React.Fragment>,
]
`;

exports[`interpolate placeholders with mixed vales 1`] = `
[
  <React.Fragment>
    Hello 
    Sébastien
  </React.Fragment>,
  <React.Fragment>
     how are you 
    <span>
      today
    </span>
  </React.Fragment>,
  <React.Fragment>
    ?
  </React.Fragment>,
]
`;
